[package]
edition = "2024"
name = "IIDX_Controller_v2"
version = "0.1.0"
license = "GPL-3.0-or-later for new work AND (MIT OR Apache-2.0) for original template"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.7.0"
critical-section = "1.2.0"
defmt = "1.0.0"
defmt-rtt = "1.0.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
fugit = "0.3.6"
heapless = "0.8.0"
pio = "0.3.0"
ssd1306 = "0.10.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

# Dependencies with features or package renames:

# [dependencies.embedded_hal_0_2]
# package = "embedded-hal"
# version = "0.2.7"
# features = ["unproven"]

[dependencies.panic-probe]
version = "1"
features = ["print-defmt"]

[dependencies.rp235x-hal]
version = "0.4"
features = [
    "rt",
    "critical-section-impl",
    "binary-info",
]

[dependencies.usbd-human-interface-device]
version = "0.6.0"
features = ["defmt"]

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
